# pctree

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish.yml  test.yml
demos/: demo_compression.ipynb  demo_generative.ipynb  demo_impute.ipynb  demo_persistent_homology.ipynb  demo_start_here.ipynb
docs_for_claude/: pct-em-training.md  pct-routing-and-pruning.md  pct-subspace-sifting.md  pct-topdown-partitioning.md  principal-component-trees.md
docs_for_claude/applications/: fixed-size-chords-for-hardware-efficiency.md
src/pctree/: subspace_clustering.py
tests/: __init__.py  test_smoke.py
